--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -17,12 +17,10 @@ Now that \texttt{FlowSystem} stores the residual values and its Jacobian, we nee
 \lstset{numbers=left}
 \lstinputlisting{code/assembleFlowSystem!.jl}
 \lstset{numbers=none}
-\texttt{assembleFlowSystem!} first resets \texttt{eqVal} and \texttt{GlobalJac} such that the structures are equal, but all the values are zero. Then the function begin traversing through the grid and for every cell it iterates through all neighbouring cells. The \texttt{eqVal} and \texttt{globalJac} variables in the \texttt{FlowSystem} struct is updated in line number 6, 8 and 10 in the inner loop. As a reminder, the residual functions that \texttt{FlowSystem} will be updated with is the functions \texttt{presEq}, \texttt{rateEq} and \texttt{ctrlEq} defined in \autoref{sec:setupGovEq}:
+\texttt{assembleFlowSystem!} first resets \texttt{eqVal} and \texttt{GlobalJac} such that the structures are unchanged, but all the values are zero. Then the function begin traversing through the grid and for every cell it iterates through all neighbouring cells. The \texttt{eqVal} and \texttt{globalJac} variables in the \texttt{FlowSystem} struct is updated in line number 6, 8 and 10 in the inner loop. As a reminder, the residual functions that \texttt{FlowSystem} will be updated with is the functions \texttt{presEq}, \texttt{rateEq} and \texttt{ctrlEq} defined in \autoref{sec:setupGovEq}:
 \lstinputlisting{code/governingEquationsPresSolver.jl}
 In line number 6, when \texttt{fromCell} and \texttt{toCell} are equal, the first term in the sum in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function \texttt{timeDerivative} that returns a \texttt{LAD} struct:
 \lstinputlisting{code/timeDerivative.jl}
-In differ from \texttt{FAD} and \texttt{CJAD} the method with local AD no longer has AD variables it can use 
-
-How this function is implemented can such that the correct index in \texttt{FlowSystem.eqVal} and the diagonal value representing the correct index in FlowSystem.eqVal is added.
+In \texttt{FAD} and \texttt{CJAD} we made all the AD-variables at once, used them as input parameters, and received a new AD-variable in return from the residual functions. With local AD we only create new local AD-variables when we need them to calculate function values and derivatives. When \texttt{timeDerivative} have returned a \texttt{LAD} variable, \texttt{assembleFlowSystem!} add the calculated value to the correct index in \texttt{FlowSystem.eqVal} and the derivative vector to the correct diagonal index in \texttt{FlowSystem.globalJac}.
 
 \todo[inline]{Se på parallellisering for lokal AD?}
