Updates from Overleaf

--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -17,12 +17,11 @@ Now that \texttt{FlowSystem} stores the  values and Jacobian of the residual fun
 \lstset{numbers=left}
 \lstinputlisting{code/assembleFlowSystem!.jl}
 \lstset{numbers=none}
-\texttt{assembleFlowSystem!()} first resets \texttt{eqVal} and \texttt{GlobalJac} such that the structures are unchanged, but all the values are zero. Then the function begin traversing through the grid and for every cell it iterates through all neighbouring cells. The looping variable \texttt{fromCell} and \texttt{toCell} can be misleading when they represent bottom-hole-pressure and total production The \texttt{eqVal} and \texttt{globalJac} variables in the \texttt{FlowSystem} struct is updated in line number 6, 8 and 10 inside the inner loop. As a reminder, the residual functions that \texttt{FlowSystem} eventually will represent are the functions \texttt{presEq}, \texttt{rateEq} and \texttt{ctrlEq} defined in \autoref{sec:setupGovEq}:
+The input parameter \texttt{well} is a struct that contains all necessary information about the well. The first line in \texttt{assembleFlowSystem!()} resets \texttt{eqVal} and \texttt{GlobalJac} such that the structures are unchanged, but all the values are zero. Then the function begin traversing through the grid and for every cell it iterates through all neighbouring cells. Be aware that the looping variable names \texttt{fromCell} and \texttt{toCell} can be a bit misleading when they represent bottom-hole-pressure and total production, as those primary variables do not belong to any cell. The \texttt{eqVal} and \texttt{globalJac} variables are updated in line number 6, 8 and 10 inside the inner loop. As a reminder, the residual functions that \texttt{FlowSystem} eventually will represent are the functions \texttt{presEq}, \texttt{rateEq} and \texttt{ctrlEq} defined in \autoref{sec:setupGovEq}:
 \lstinputlisting{code/governingEquationsPresSolver.jl}
 
-
-In line number 6, when \texttt{fromCell} and \texttt{toCell} are equal, the first term in the sum in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function \texttt{timeDerivative} that returns a \texttt{LAD} struct:
+In line number 6, when \texttt{fromCell} and \texttt{toCell} are equal and not bottom-hole-pressure or total production, the first term in the sum in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function \texttt{timeDerivative} that returns a \texttt{LAD} struct:
 \lstinputlisting{code/timeDerivative.jl}
-In \texttt{FAD} and \texttt{CJAD} we made all the primary AD-variables before the simulation and used them as input parameters in the residual functions. These functions returned new AD-variables that represented the values and Jacobians of the residual functions. With local AD we create new primary AD-variables for the specific cell inside the residual functions when we need them to calculate function values and derivatives. When \texttt{timeDerivative} have returned a \texttt{LAD} variable, \texttt{assembleFlowSystem!()} add the calculated value to the correct index in \texttt{FlowSystem.eqVal} and the derivative vector to the correct diagonal index in \texttt{FlowSystem.globalJac}.
+In \texttt{FAD} and \texttt{CJAD} we made all the primary AD-variables before the simulation and used them as input parameters in the residual functions that returned new AD-variables that represented the values and Jacobians. With local AD we create new primary AD-variables for the specific cell inside the residual functions when we need them to calculate function values and derivatives. When \texttt{timeDerivative} have returned a \texttt{LAD} variable, \texttt{assembleFlowSystem!()} add the calculated value to the correct index in \texttt{FlowSystem.eqVal} and the derivative vector to the correct diagonal index in \texttt{FlowSystem.globalJac}.
 
 \todo[inline]{Se på parallellisering for lokal AD?}
