--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -19,9 +19,10 @@ Now that \texttt{FlowSystem} stores the  values and Jacobian of the residual fun
 \lstset{numbers=none}
 The input parameter \texttt{well} is a struct that contains all necessary information about the well. The first line in \texttt{assembleFlowSystem!()} resets \texttt{eqVal} and \texttt{GlobalJac} such that the structures are unchanged, but all the values are zero. Then the function begin traversing through the grid and for every cell it iterates through all neighbouring cells. Be aware that the looping variable names \texttt{fromCell} and \texttt{toCell} can be a bit misleading when they represent bottom-hole-pressure and total production, as those primary variables do not belong to any cell. The \texttt{eqVal} and \texttt{globalJac} variables are updated in line number 6, 8 and 10 inside the inner loop. As a reminder, the residual functions that \texttt{FlowSystem} eventually will represent are the functions \texttt{presEq}, \texttt{rateEq} and \texttt{ctrlEq} defined in \autoref{sec:setupGovEq}:
 \lstinputlisting{code/governingEquationsPresSolver.jl}
-
-In line number 6, when \texttt{fromCell} and \texttt{toCell} are equal and not bottom-hole-pressure or total production, the first term in the sum in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function \texttt{timeDerivative} that returns a \texttt{LAD} struct:
+In line number 6, when \texttt{fromCell} and \texttt{toCell} are equal, but not the bottom-hole-pressure or total production, the first term in the sum in \texttt{presEq}, or the backward Euler term, is calculated. This is performed in an outer function called \texttt{timeDerivative()} that returns a \texttt{LAD} struct:
 \lstinputlisting{code/timeDerivative.jl}
-In \texttt{FAD} and \texttt{CJAD} we made all the primary AD-variables before the simulation and used them as input parameters in the residual functions that returned new AD-variables that represented the values and Jacobians. With local AD we create new primary AD-variables for the specific cell inside the residual functions when we need them to calculate function values and derivatives. When \texttt{timeDerivative} have returned a \texttt{LAD} variable, \texttt{assembleFlowSystem!()} add the calculated value to the correct index in \texttt{FlowSystem.eqVal} and the derivative vector to the correct diagonal index in \texttt{FlowSystem.globalJac}.
+In \texttt{FAD} and \texttt{CJAD} we made all the primary AD-variables before the simulation. We then used them as input parameters in the residual functions that returned new AD-variables which represented the values and Jacobians. With local AD we create new primary AD-variables for the applicable cell inside the function we want to evaluate. For \texttt{timeDerivative()} we create a \texttt{LAD} primary variable that represent the pressure in the cell before we calculate the backward Euler term. When \texttt{timeDerivative()} have returned the new \texttt{LAD} variable, \texttt{assembleFlowSystem!()} adds the calculated value to the correct index in \texttt{eqVal} and the derivative vector to the correct diagonal index in \texttt{globalJac}.
+
+In line number 10, when \texttt{fromCell} and \texttt{toCell} are two neighbouring cells the last term in 
 
 \todo[inline]{Se på parallellisering for lokal AD?}
